fixed mobile color and shifted score position

--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,6 @@ td{
 }
 
 label{
-  color: #FFF;
+  color: #fff;
 }
 
