--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,10 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+  label{
+    color: #90ADBB;
+  }
+  
 }
 
 td{
@@ -81,3 +85,4 @@ table{
 input{
   text-align: center;
 }
+
